WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308581
[WGSL] webgpu:shader,validation,expression,call,builtin,pow:* is failing
https://bugs.webkit.org/show_bug.cgi?id=308581
Summary
[WGSL] webgpu:shader,validation,expression,call,builtin,pow:* is failing
Tadeu Zagallo
Reported
2026-02-24 14:14:32 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-24 14:14:41 PST
<
rdar://problem/171110936
>
Tadeu Zagallo
Comment 2
2026-02-24 14:19:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59363
EWS
Comment 3
2026-02-25 14:18:18 PST
Committed
308233@main
(689b6cd32680): <
https://commits.webkit.org/308233@main
> Reviewed commits have been landed. Closing PR #59363 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug