[WGSL] webgpu:shader,validation,expression,call,builtin,pow:* is failing https://bugs.webkit.org/show_bug.cgi?id=308581 rdar://171110936

Reviewed by Mike Wyrzykowski.

There were missing validations in the `pow` constant function implementation. We
still fail the tests for `pow(0, 0)`, but that is pending clarification[1] on
whether the result expected by the CTS is the desired one, as it seems to conflict
with the spec[2].

[1]: https://github.com/gpuweb/gpuweb/issues/5557
[2]: https://www.w3.org/TR/WGSL/#pow-builtin

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/expression/call/builtin/pow-expected.txt:
* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::BINARY_OPERATION):

Canonical link: https://commits.webkit.org/308233@main